Solve bug shifting pixels in selectionCanvas.

--- a/src/css/gui.css
+++ b/src/css/gui.css
@@ -97,6 +97,7 @@ canvas {
 }
 
 #selection_canvas {
+    border: 1px solid transparent;
     z-index: 70;
 }
 
